--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.97"
 clap = { version = "4.5.35", features = ["derive"] }
+rayon = "1.11.0"
 tree-sitter = "0.25.3"
 tree-sitter-haskell = "0.23.1"
 
